# GovBudgetChecker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUG_FIX_REPORT.md  CHANGELOG.md  CLOUD_DEPLOY_EXECUTION_SHEET.md  Dockerfile.ai-extractor  Dockerfile.backend  Makefile  PRODUCTION_DEPLOYMENT_REPORT.md  README.md  README_AI_ASSIST.md  SYSTEM_CHECK_REPORT.md  SYSTEM_EVALUATION_REPORT.md  add_deduped_ui.js  ai_extractor_service.py  apply_ui_patch.js  docker-compose.ai.yml  docker-compose.yml  fix_tsx.js  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  refactor_org_accordion.js  refactor_page_accordion.js  requirements.txt  start-8000.err  start-8000.out  常用提示词模板.md  快速使用说明.md  批量检查模板.md  系统冗余内容检查报告.md  阿里云部署手册_GovBudgetChecker.md  预算检查规则设计方案.md
api/: auth_utils.py  config.py  job_queue.py  main.py  queue_runtime.py  runtime.py  worker.py
app/: .dockerignore  Dockerfile  middleware.ts  package-lock.json  package.json  start-3000.out  tailwind.config.ts
config/: providers.yaml  settings.py
data/: job_org_links.json  organizations.json  organizations.json.bak.20260308-125300  users.json  组织架构导入模板.csv
docs/: FUNCTIONAL_CLASSIFICATION_NAME_ALIGNMENT.md  PERF_BASELINE.md  PRODUCTION_HARDENING.md  PROD_READINESS_PLAN.md  PS_DB_ALIGNMENT_PLAN.md  PS_SHARED_DB_DESIGN.md  RELEASE_RUNBOOK.md  SRC_LAYOUT_MIGRATION.md  budget_rules_opus_merge_assessment.md  budget_rules_profile_2025_office.md  validation_2026_batch_summary.json
e2e/: playwright.config.ts
rules/: budget_v3_3_draft.yaml  v3_3.yaml
(+269 files in other folders)
