[project]
name = "govbudgetchecker"
version = "0.1.0"
description = "Scaffolding for GovBudgetChecker backend tooling"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
minversion = "7.0"
addopts = "-ra"

[tool.ruff]
line-length = 100
extend-exclude = ["app", "e2e"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E402", "E501", "F401", "B008", "B904", "E722", "E701", "B007", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = false
warn_unused_ignores = false
warn_redundant_casts = false
warn_no_return = false
warn_unreachable = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
implicit_optional = true
ignore_missing_imports = true
disable_error_code = [
  "assignment",
  "arg-type",
  "call-arg",
  "return-value",
  "no-any-return",
  "attr-defined",
  "misc",
  "override",
  "union-attr",
  "unreachable",
  "import-untyped",
  "index",
  "var-annotated",
  "truthy-function",
  "operator",
  "call-overload",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
allow_untyped_defs = true
